--- a/static/index.html
+++ b/static/index.html
@@ -1,120 +1,299 @@
 <!doctype html>
 <html>
   <head>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap"
+      rel="stylesheet"
+    />
+    <meta charset="utf-8" />
     <title>Rate My Lambeth</title>
     <style>
+      @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
+
+      body,
+      html {
+        font-family:
+          "Roboto",
+          -apple-system,
+          BlinkMacSystemFont,
+          "Segoe UI",
+          "Helvetica",
+          "Arial",
+          sans-serif;
+
+        margin: 0;
+        padding: 0;
+        height: 100%;
+        overflow: hidden;
+      }
+
+      body {
+        display: flex;
+        flex-direction: column;
+        background: linear-gradient(135deg, #f5f7fa, #c3cfe2);
+      }
+
+      nav {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 10px 20px;
+        background-color: rgba(255, 255, 255, 0.8);
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        z-index: 10;
+        justify-content: end;
+        gap: 10px;
+      }
+
+      dialog {
+        padding: 20px;
+        border-radius: 10px;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+
+        button {
+          float: right;
+          font-size: 16px;
+          font-weight: bold;
+          border: none;
+          cursor: pointer;
+          padding: 10px 20px;
+          border-radius: 5px;
+        }
+      }
+
+      dialog::backdrop {
+        background-color: rgb(0 0 0 / 45%);
+        transition:
+          display 0.7s allow-discrete,
+          overlay 0.7s allow-discrete,
+          background-color 0.7s;
+      }
+
       #street-view {
-        height: 400px;
+        flex-grow: 1;
         width: 100%;
+        height: 50vh; /* Takes up half the viewport height */
+      }
+
+      #info-panel {
+        position: absolute;
+        top: 42px;
+        left: 10px;
+        right: 10px;
+
+        background-color: rgba(255, 255, 255, 0.8);
+        border-radius: 8px;
+        padding: 10px;
+        font-size: 14px;
+        max-height: 30%;
+        overflow-y: auto;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        z-index: 10;
+      }
+
+      .button-container {
+        display: flex;
+        height: 16vh;
+      }
+
+      button {
+        font-family:
+          "Roboto",
+          -apple-system,
+          BlinkMacSystemFont,
+          "Segoe UI",
+          "Helvetica",
+          "Arial",
+          sans-serif;
+        font-size: 28px;
+        font-weight: bold;
+        border: none;
+        cursor: pointer;
+        flex: 1;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        transition: all 0.3s ease;
+        position: relative;
+        overflow: hidden;
+      }
+
+      button::before {
+        content: "";
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        width: 0;
+        height: 0;
+        background: rgba(255, 255, 255, 0.2);
+        border-radius: 50%;
+        transform: translate(-50%, -50%);
+        transition: all 0.5s ease;
+      }
+
+      #vote_not {
+        /* responsive font-size */
+        font-size: 42px;
+        background: linear-gradient(135deg, #ff4757, #ff6b6b);
+        color: white;
+      }
+
+      #vote_hot {
+        font-size: 42px;
+        background: linear-gradient(135deg, #2ed573, #7bed9f);
+        color: white;
+      }
+
+      button:hover {
+        transform: translateY(-3px);
+        box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+      }
+
+      button:active {
+        transform: translateY(-1px);
+        box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+      }
+
+      button:active::before {
+        width: 300px;
+        height: 300px;
+        opacity: 0;
+        transition: 0s;
+      }
+
+      button span {
+        position: relative;
+        z-index: 1;
+      }
+
+      @media (max-height: 600px) {
+        #info-panel {
+          font-size: 12px;
+          padding: 5px;
+        }
+
+        button {
+          font-size: 20px;
+        }
       }
     </style>
   </head>
 
   <body>
+    <dialog>
+      <h1>🔥 Hot or 🤮 Not?</h1>
+      <p>Do you think this street is hot or not?</p>
+      <p>Vote now on your phones!</p>
+
+      <button>Close FAQ</button>
+    </dialog>
+    <nav>
+      <div>FAQ</div>
+    </nav>
     <div id="street-view"></div>
     <div id="info-panel"></div>
 
-    <fieldset>
-      <legend>Is this street hot?</legend>
-
-      <input type="radio" id="yes" name="hotornot" value="yes" />
-      <label for="yes">Yes</label>
-
-      <input type="radio" id="no" name="hotornot" value="no" />
-      <label for="no">No</label>
-
-      <input checked type="radio" id="dunno" name="hotornot" value="dunno" />
-      <label for="dunno">I Dunno</label>
-    </fieldset>
-
-    <button id="new_street">New Street</button>
-    <button id="submit">Submit</button>
-
-    <script
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB_lLDblzEhAKvNL7ppvUnfQxRkFUL08Bk"
-      async
-      defer
-    ></script>
-    <script>
-      let panorama;
-      let streetPoints = [];
-
-      fetch("/static/data.json")
-        .then((r) => r.json())
-        .then((data) => {
-          streetPoints = data;
-          initialize();
-        });
-
-      function getRandomLocation() {
-        const lat =
-          Math.random() * (lambethBounds.north - lambethBounds.south) +
-          lambethBounds.south;
-        const lng =
-          Math.random() * (lambethBounds.east - lambethBounds.west) +
-          lambethBounds.west;
-        return { lat, lng };
-      }
-
-      function getRandomLocation2() {
-        const loc =
-          streetPoints[Math.floor(Math.random() * streetPoints.length)];
-        updateInfoPanel(loc);
-        return loc;
-      }
-
-      function initialize() {
-        const fenway = getRandomLocation2();
-        console.log(fenway);
-        panorama = new google.maps.StreetViewPanorama(
-          document.getElementById("street-view"),
-          {
-            position: fenway,
-            pov: { heading: 165, pitch: 0 },
-            zoom: 1,
-            // addressControl: false,
-            linksControl: false,
-            motionTracking: false,
-            motionTrackingControl: false,
-            fullscreenControl: false,
-            enableCloseButton: false,
-            clickToGo: false,
-          },
-        );
-
-        panorama.addListener("status_changed", function () {
-          if (panorama.getStatus() !== google.maps.StreetViewStatus.OK) {
-            setRandomLocation();
-          }
-        });
-      }
-
-      function setRandomLocation() {
-        const loc = getRandomLocation2();
-        panorama.setPosition(loc);
-        console.log(loc);
-      }
-
-      function submitRating() {
-        alert("thanks!");
-        setRandomLocation();
-      }
-
-      function updateInfoPanel(location) {
-        const infoPanel = document.getElementById("info-panel");
-        infoPanel.innerHTML = `
-                <h3>${location.name || "Unnamed Street"}</h3>
-                <p>Type: ${location.highway}</p>
-                <p>One-way: ${location.oneway ? "Yes" : "No"}</p>
-                <p>Max Speed: ${location.maxspeed || "Not specified"}</p>
-            `;
-      }
-
-      button = document.getElementById("new_street");
-      button.addEventListener("click", setRandomLocation);
-
-      submit = document.getElementById("submit");
-      submit.addEventListener("click", submitRating);
-    </script>
+    <div class="button-container">
+      <button id="vote_not"><span>🤮 not</span></button>
+      <button id="vote_hot"><span>🔥 hot</span></button>
+    </div>
   </body>
+
+  <script
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB_lLDblzEhAKvNL7ppvUnfQxRkFUL08Bk"
+    async
+    defer
+  ></script>
+  <script>
+    let panorama;
+    let streetPoints = [];
+
+    fetch("/static/data.json")
+      .then((r) => r.json())
+      .then((data) => {
+        streetPoints = data;
+        initialize();
+      });
+
+    function getRandomLocation() {
+      const lat =
+        Math.random() * (lambethBounds.north - lambethBounds.south) +
+        lambethBounds.south;
+      const lng =
+        Math.random() * (lambethBounds.east - lambethBounds.west) +
+        lambethBounds.west;
+      return { lat, lng };
+    }
+
+    function getRandomLocation2() {
+      const loc = streetPoints[Math.floor(Math.random() * streetPoints.length)];
+      updateInfoPanel(loc);
+      return loc;
+    }
+
+    function initialize() {
+      const fenway = getRandomLocation2();
+      console.log(fenway);
+      panorama = new google.maps.StreetViewPanorama(
+        document.getElementById("street-view"),
+        {
+          position: fenway,
+          pov: { heading: 165, pitch: 0 },
+          zoom: 1,
+          addressControl: false,
+          linksControl: false,
+          motionTracking: false,
+          motionTrackingControl: false,
+          fullscreenControl: false,
+          enableCloseButton: false,
+          clickToGo: false,
+        },
+      );
+
+      panorama.addListener("status_changed", function () {
+        if (panorama.getStatus() !== google.maps.StreetViewStatus.OK) {
+          setRandomLocation();
+        }
+      });
+    }
+
+    function setRandomLocation() {
+      const loc = getRandomLocation2();
+      panorama.setPosition(loc);
+      console.log(loc);
+    }
+
+    function submitHot() {
+      setRandomLocation();
+    }
+
+    function submitNot() {
+      setRandomLocation();
+    }
+
+    function updateInfoPanel(location) {
+      const infoPanel = document.getElementById("info-panel");
+      infoPanel.innerHTML = `
+                <h3>${location.name || "Unnamed Street"}</h3>
+            `;
+    }
+
+    button = document.getElementById("vote_hot");
+    button.addEventListener("click", submitHot);
+
+    submit = document.getElementById("vote_not");
+    submit.addEventListener("click", submitNot);
+
+    const dialog = document.querySelector("dialog");
+    const faq = document.querySelector("nav div");
+    const closeButton = document.querySelector("dialog button");
+
+    faq.addEventListener("click", () => {
+      dialog.showModal();
+    });
+
+    closeButton.addEventListener("click", () => {
+      dialog.close();
+    });
+  </script>
 </html>
