fix: stop keyboard events going to goos

--- a/static/index.html
+++ b/static/index.html
@@ -113,6 +113,29 @@
     defer
   ></script>
   <script>
+    document.addEventListener(
+      "keydown",
+      (event) => {
+        if (
+          // Change or remove this condition depending on your requirements.
+          (event.key === "ArrowUp" || // Move forward
+            event.key === "ArrowDown" || // Move forward
+            event.key === "ArrowLeft" || // Pan left
+            event.key === "ArrowRight" || // Pan right
+            event.key === "+" || // Zoom in
+            event.key === "=" || // Zoom in
+            event.key === "_" || // Zoom out
+            event.key === "-") && // Zoom out
+          !event.metaKey &&
+          !event.altKey &&
+          !event.ctrlKey
+        ) {
+          event.stopPropagation();
+        }
+      },
+      { capture: true },
+    );
+
     if (document.documentElement.requestFullscreen) {
       document.documentElement.requestFullscreen();
     }
