fixup! wip: tinder style

--- a/static/index.html
+++ b/static/index.html
@@ -215,7 +215,7 @@
 
           // add a new element to the bottom
           const newEl = document.createElement("div");
-          newEl.classList.add("street-view-card");
+          newEl.classList.add("street-view");
           document.getElementById("street-views").appendChild(newEl);
           initDiv(newEl, 2); // FIXME always adding on the end of our max element, which is THREE (3)
         },
