--- a/static/index.html
+++ b/static/index.html
@@ -13,7 +13,7 @@
     <title>Rate My Lambeth</title>
     <style>
       main {
-        height: 70vh;
+        height: 100%;
       }
 
       #street-views,
@@ -135,6 +135,7 @@
       }
 
       .button-container {
+        width: 100%;
         display: flex;
         justify-content: center;
         margin-top: 20px;
