--- a/static/index.html
+++ b/static/index.html
@@ -5,21 +5,34 @@
       href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
       rel="stylesheet"
     />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0, viewport-fit=cover"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="utf-8" />
     <title>Rate My Lambeth</title>
     <style>
+      @import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap");
+      html,
+      body {
+        font-family: "Quicksand", sans-serif;
+        padding: 8px;
+      }
+
       main {
         height: 100%;
+      }
+
+      nav {
+        padding: 20px;
+        text-align: center;
+
+        font-weight: 700;
       }
 
       #street-views,
       .street-view-card {
         height: 100%;
         aspect-ratio: 16/16;
+
+        max-width: 500px;
       }
 
       #street-views {
@@ -142,48 +155,45 @@
       }
 
       .controls {
+        margin-top: 8px;
         display: flex;
         gap: 10px;
+      }
 
-        .button-box,
-        button {
-          border-radius: 50%;
-          aspect-ratio: 1/1;
-        }
+      .button-box,
+      button {
+        border-radius: 50%;
+        aspect-ratio: 1/1;
+      }
 
-        .button-box {
-          height: 90px;
-          box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
-          padding: 16px;
-          background: #eee;
-        }
+      .button-box {
+        width: auto;
+        box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+        padding: 16px;
+        background: #eee;
+      }
 
-        button {
-          font-size: 32px;
-          border: none;
-          width: 100%;
+      button {
+        font-size: 32px;
+        border: none;
+        width: 100%;
 
-          background: white;
+        background: white;
 
-          box-shadow: 0 1px 5px rgba(0, 0, 0, 0.2);
-          transition: transform 0.1s;
-        }
+        box-shadow: 0 1px 5px rgba(0, 0, 0, 0.2);
+        transition: transform 0.1s;
+      }
 
-        button:active {
-          transform: scale(0.9);
-          transition: all 0.05s linear;
-        }
+      button:active {
+        transform: scale(0.9);
+        transition: all 0.05s linear;
       }
     </style>
   </head>
 
   <body>
     <nav>
-      <div>🌳 rate my lambeth</div>
-      <div>
-        <a href="/static/about.html">about</a>
-        <a href="/static/faq.html">faq</a>
-      </div>
+      <div>🌳 rate my street</div>
     </nav>
 
     <main>
