--- a/static/index.html
+++ b/static/index.html
@@ -1,10 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
-      rel="stylesheet"
-    />
+    <link rel="icon" type="image/x-icon" href="/static/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="utf-8" />
     <title>Rate My Lambeth</title>
